--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,9 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "axios": "^0.19.2",
+    "dotenv": "^8.2.0",
+    "jsonwebtoken": "^8.5.1",
+    "query-string": "^6.13.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
@@ -40,6 +43,7 @@
     ]
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/react-router-dom": "^5.1.5"
   }
 }
