--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,8 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.1",
+    "node-pre-gyp": "^0.15.0",
+    "sqlite": "^4.0.11",
     "sqlite3": "^4.2.0"
   },
   "devDependencies": {
