--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/nodemailer": "^6.4.0",
     "celebrate": "^12.1.1",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
@@ -19,6 +20,7 @@
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.1",
     "node-pre-gyp": "^0.15.0",
+    "nodemailer": "^6.4.10",
     "sqlite": "^4.0.11",
     "sqlite3": "^4.2.0"
   },
