--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react-icons": "^3.10.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-select": "^3.1.0",
     "typescript": "~3.7.2"
   },
   "scripts": {
@@ -44,6 +45,7 @@
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^8.5.0",
-    "@types/react-router-dom": "^5.1.5"
+    "@types/react-router-dom": "^5.1.5",
+    "@types/react-select": "^3.0.19"
   }
 }
