--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "jsonwebtoken": "^8.5.1",
     "query-string": "^6.13.1",
     "react": "^16.13.1",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
     "react-router-dom": "^5.2.0",
@@ -45,6 +46,7 @@
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/react-custom-scrollbars": "^4.0.7",
     "@types/react-router-dom": "^5.1.5",
     "@types/react-select": "^3.0.19"
   }
